--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
   <string name="error_percentage">Error setting percentage. Value must be from 1 to 100</string>
   <string name="error_lines">Invalid number of lines. Must be positive number.</string>
   <string name="volume_btn_color">Set color</string>
+  <string name="volume_text_current_percentage">Volume set at: %1d%%</string>
 </resources>
